fixed overflow for note

--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,7 @@ textarea:focus {
   justify-content: space-between;
   white-space: pre-wrap;
   background-color: #BADFE7;
+  word-wrap: break-word;
   border-radius: 10px;
   font-size: 15pt;
   padding: 1rem; /*change padding relative to font size*/
